src/snapshots/templates__test__scan_escaped_parens.snap
---
source: src/main.rs
assertion_line: 281
expression: "Hello {{ name }}, good to meet you"

---
[
    Text(
        "Hello { name }, good to meet you",
    ),
]
