src/snapshots/templates__test__scan_identifier.snap
---
source: src/main.rs
assertion_line: 271
expression: "Hello { name }, good to meet you"

---
[
    Text(
        "Hello ",
    ),
    OpenParen,
    Reference(
        "name",
    ),
    CloseParen,
    Text(
        ", good to meet you",
    ),
]
