src/snapshots/templates__test__scan_if_else_statement.snap
---
source: src/main.rs
assertion_line: 444
expression: "Hello {% if is_user %}User{% else %}Unknown{% endif %}"

---
[
    Text(
        "Hello ",
    ),
    OpenStmt,
    If,
    Identifier(
        "is_user",
    ),
    CloseStmt,
    Text(
        "User",
    ),
    OpenStmt,
    Else,
    CloseStmt,
    Text(
        "Unknown",
    ),
    OpenStmt,
    EndIf,
    CloseStmt,
]
