src/snapshots/templates__test__scan_if_statement.snap
---
source: src/main.rs
assertion_line: 352
expression: "Hello {% if is_user %}User{% endif %}"

---
[
    Text(
        "Hello ",
    ),
    OpenStmt,
    If,
    Identifier(
        "is_user",
    ),
    CloseStmt,
    Text(
        "User",
    ),
    OpenStmt,
    EndIf,
    CloseStmt,
]
