src/snapshots/templates__test__scan_import.snap
---
source: src/main.rs
assertion_line: 876
expression: "{> import user.{User}\n{{ name }}"

---
[
    (
        OpenLine,
        0..1,
    ),
    (
        Import,
        3..9,
    ),
    (
        ImportDetails(
            "user.{User}",
        ),
        10..21,
    ),
    (
        CloseLine,
        21..21,
    ),
    (
        OpenValue,
        22..23,
    ),
    (
        Identifier(
            "name",
        ),
        25..29,
    ),
    (
        CloseValue,
        30..31,
    ),
]
