src/snapshots/templates__test__scan_nested_if_statements.snap
---
source: src/main.rs
assertion_line: 859
expression: "Hello {% if is_user %}{% if is_admin %}Admin{% else %}User{% endif %}{% endif %}"

---
[
    (
        Text(
            "Hello ",
        ),
        0..6,
    ),
    (
        OpenStmt,
        6..7,
    ),
    (
        If,
        9..11,
    ),
    (
        Identifier(
            "is_user",
        ),
        12..19,
    ),
    (
        CloseStmt,
        20..21,
    ),
    (
        OpenStmt,
        22..23,
    ),
    (
        If,
        25..27,
    ),
    (
        Identifier(
            "is_admin",
        ),
        28..36,
    ),
    (
        CloseStmt,
        37..38,
    ),
    (
        Text(
            "Admin",
        ),
        39..44,
    ),
    (
        OpenStmt,
        44..45,
    ),
    (
        Else,
        47..51,
    ),
    (
        CloseStmt,
        52..53,
    ),
    (
        Text(
            "User",
        ),
        54..58,
    ),
    (
        OpenStmt,
        58..59,
    ),
    (
        EndIf,
        61..66,
    ),
    (
        CloseStmt,
        67..68,
    ),
    (
        OpenStmt,
        69..70,
    ),
    (
        EndIf,
        72..77,
    ),
    (
        CloseStmt,
        78..79,
    ),
]
