src/snapshots/templates__test__scan_pure_text.snap
---
source: src/main.rs
assertion_line: 815
expression: "Hello name, good to meet you"

---
[
    (
        Text(
            "Hello name, good to meet you",
        ),
        0..27,
    ),
]
