src/snapshots/templates__test__scan_single_parens.snap
---
source: src/main.rs
assertion_line: 830
expression: "Hello { name }, good to meet you"

---
[
    (
        Text(
            "Hello { name }, good to meet you",
        ),
        0..31,
    ),
]
